@@ -105,6 +105,7 @@ The following bugs are resolved with this release:
   [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
   [33185] Fix double-free after allocation failure in regcomp
   [32483] ctype macros segfault in multithreaded programs with multiple libc.so
+  [33234] Use TLS initial-exec model for __libc_tsd_CTYPE_* thread variables
 
 Version 2.39
 
